# God-of-war

./: README.md  settings.gradle
.github/workflow/: build.yml
.github/workflows/: android.yml  build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  camera.cpp  camera.h  game_engine.cpp  game_engine.h  main.cpp  player.cpp  player.h  shaders.cpp  shaders.h  vulkan_renderer.cpp  vulkan_renderer.h
app/src/main/java/com/godofwar/game/: MainActivity.kt
app/src/main/res/mipmap/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml
